edited html files.

--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -8,8 +8,7 @@
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7">
                 <div class="page-heading">
-                    <h1>درباره من</h1>
-                    <span class="subheading">تست تست تست.</span>
+                    <h1>درباره ما</h1>
                 </div>
             </div>
         </div>
@@ -20,9 +19,33 @@
     <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut consequuntur magnam, excepturi aliquid ex itaque esse est vero natus quae optio aperiam soluta voluptatibus corporis atque iste neque sit tempora!</p>
+                <p>امروز می خوایم از خود خودمون واستون بگیم از اولین روزهای ای تحفه! می‌دونیم که داستانمون جالبه، داستانی که باعث شد امروز جامعه‌ی استارتاپی ایران ما رو به عنوان یک مجموعه‌ی خوش نام و خوش فکر بشناسه و بتونیم هر روز برای بهتر شدن و ارائه‌ی خدمات مفیدتر به شما تلاش کنیم.
+
+                    اون روزها بندرعباس مشغول کار بودم و هرچند ماه یکبار فرصتی پیش می‌اومد تا برای دیدن خانواده راهی خراسان بشم. بین راه از شهرهای کوچیک و بزرگی می‌گذشتم اما همیشه تو اردکان یک توقف کوچیک داشتم اونم به خاطر سوغاتی خوشمزش که یک صبحانه پر انرژی بود یعنی ارده کنجد ناب ایرانی که خودم اونو با شیره انگور مخلوط میکردم.
+                    
+                     اما گاهی شرایط یاری نمی‌کرد و بخت با خرید سوغات و تحفه یار نبود. از تعطیلی فروشگاهی که هر بار بهترین و خوش طعم ترین ارده‌ اردکان رو ازش می‌خریدم گرفته تا به تعویق افتادن سفر، نبودن فرصت برای خرید و … از سمت دیگه چون طعم و مزه ارده کنجد ایرانی زیر دندونم اومده بود و همیشه عادت داشتم با پرسُ جو از اهالی  همون شهر بهترین فروشنده رو از بازارهای محلی پیدا کنم نمی‌تونستم خودم رو به خرید محصولات شرکتی از فروشگاه‌های زنجیره‌ای راضی کنم!
+                    
+                    باید یه راه دیگه وجود داشته باشه!
+                    
+                    این طور وقتها به این فکر می‌کردم که باید راه حل دیگه‌ای هم وجود داشته باشه، یه راه حل آسون و کاربردی برای خرید بهترین‌ سوغات‌ها  از بهترین و معتبرترین فروشنده ها در هر شهر. راهکاری که بتونی در هر شرایطی ازش بهره‌مند شی .از یک طرف بشه با اطمینان بهترین و مرغوب ترین سوغات هر شهر رو از خوشنام‌ترین تولیدکننده و فروشگاه خریداری کرد و از طرف دیگه نیازی به خرید حضوری وجود نداشته باشه و بشه بدون محدودیت به بهترین سوغات‌ها از اقصی نقاط ایران دسترسی داشت. حتی بشه اگرم تو اون شهر بودی و وقت رفتن به مرکز شهر و خرید سوغاتی رو نداشته باشی آنلاین خرید کنی و با پیک موتوری خیلی سریع برسه به دستت.
+                    
+                    ای تحفه متولد شد!
+                    
+                    این اولین جرقه بود برای تولد برندی که امروز با اسم تجاری ای تحفه اون رو میشناسیم. یه مرجع کامل از تمامی سوغات‌های محبوب، از برترین تولیدکنندگان سوغات و صنایع دستی در اقصی نقاط کشور. برندی که در تلاشه عطر، طعم و هنر ایران زمین رو در دسترس شما قرار بده و در هر شرایطی همراه با شما قدم بر داره.
+                    
+                    فرقی نمی‌کنه که در کدوم منطقه از ایران سکونت دارید، فرقی نمی کنه که کدوم محصول از کدوم شهر و استان باب طبع شماست، ما دست شما رو برای انتخاب باز گذاشتیم.
+                    
+                    می‌تونید به سادگی سوغات و صنایع دستی مدنظرتون رو انتخاب کنید و با اطمینان از اصالت، کیفیت، بهداشت و مرغوبیت محصول ، یک خرید بی نظیر برای خودتون یا یک هدیه برای عزیزانتون رو تجربه کنید .
+                    
+                    و اما…
+                    
+                    ای تحفه یه فروشگاه آنلاینه، دسترسی به اینترنت تنها شرط خرید از فروشگاه ماست. انواع و اقسام سوغات و صنایع دستی رو در حوزه‌های متنوع در اختیار شما قرار دادیم و در تلاش هستیم از شمال تا جنوب، غرب تا شرق ایران رو تحت پوشش قرار بدیم.
+                    
+                    برندهای موجود در ای تحفه از بهترین و با کیفیت‌ترین‌های ایرانند. برندهایی خوش نام که اسمشون برای شما آشناست و محصولاتشون جزو محبوب‌ترینهای موجود در بازاره . برندهایی که از طریق نظر سنجی‌های مردم بومی اون منطقه انتخاب شدند و می‌تونید با اعتماد کامل اونها رو به سبد خریدتون اضافه کنید.
+                    
+                    ما در ای تحفه به دنبال بهترین خدمات برای شما هستیم تا سوغات و صنایع دستی بومی با بهترین کیفیت و در سریع ترین زمان ممکن به دست شما برسه.
+                    
+                    با همراهی و لبخند شما با ثبات در این مسیر قدم بر می‌داریم!</p>
             </div>
         </div>
     </div>
