--- a/blog/templates/blog/category.html
+++ b/blog/templates/blog/category.html
@@ -3,13 +3,13 @@
 {%block title%} | Home{%endblock%}
 {% block main %}
 <!-- Page Header-->
-<header class="masthead" style="background-image: url('{% static "blog/assets/img/Jewkes-Design_Black-Modern-House.jpg" %}')">
+<header class="masthead" style="background-image: url('{% static "blog/assets/img/rankig.jpg" %}')">
     <div class="container position-relative px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7">
                 <div class="site-heading">
-                    <h1>کوخونه</h1>
-                    <span class="subheading">جایی برای یافتن خانه دلخواه شما</span>
+                    <h1>سوغات‌دونی</h1>
+                    <span class="subheading">خرید بهترین سوغاتی‌ها از سراسر ایران</span>
                 </div>
             </div>
         </div>
