--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -14,16 +14,21 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="{%static 'blog/css/styles.css' %}" rel="stylesheet" />
         <link href="{%static 'blog/css/rtl.css' %}" rel="stylesheet" />
+        <link href="{%static 'blog/css/buttons.css' %}" rel="stylesheet" />
     </head>
     <body>
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="https://github.com/ErfanMahmoudiGit/SE-Lab">{% git %}</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                    Menu
-                    <i class="fas fa-bars"></i>
-                </button>
+                {% if user.is_authenticated %}
+                    <p class="navbar-brand">خوش آمدید  {{ user.username }} !&emsp;</p>
+                    <button class="sign-out-button">
+                        <a href="{% url 'logout' %}"><img src="{% static "blog/assets/img/logout_icon.png" %}" class = sign-out-img ></a>
+                    </button>
+                {% else %}
+                    <a class="navbar-brand" href="{% url 'blog:login' %}">ورود &emsp;</a>
+                    <a class="navbar-brand" href="{% url 'blog:signup' %}">ثبت نام</a>
+                {% endif %}
                 {% category_navbar %}
             </div>
         </nav>
