--- a/blog/templates/blog/partials/category_navbar.html
+++ b/blog/templates/blog/partials/category_navbar.html
@@ -17,7 +17,7 @@
         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'blog:about' %}">درباره</a></li>
         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'blog:contact' %}">پشتیبانی</a></li>
         <button class="shopping-card-button">
-          <a href="{% url 'blog:shoppingcard' %}"><img src="{% static "blog/assets/img/shopping-cart.png" %}" class = shopping-card-image ></a>
+          <a href="{% url 'blog:shopping_cart' %}"><img src="{% static "blog/assets/img/shopping-cart.png" %}" class = shopping-card-image ></a>
         </button>
     </ul>
 </div>
