--- a/blog/templates/blog/signup.html
+++ b/blog/templates/blog/signup.html
@@ -2,10 +2,22 @@
 {% load static%}
 {%block title%} | SignUp {%endblock%}
 {% block main %}
-    <h2>Sign Up</h2>
+<!-- Page Header-->
+<header class="masthead" style="background-image: url('{% static "blog/assets/img/log.jpg" %}')">
+    <div class="container position-relative px-4 px-lg-5">
+        <div class="row gx-4 gx-lg-5 justify-content-center">
+            <div class="col-md-10 col-lg-8 col-xl-7">
+                <div class="page-heading">
+                    <h1>ثبت نام</h1>
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
+<!-- Main Content-->
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">Sign Up</button>
+        <button type="submit">ثبت نام</button>
     </form>
 {% endblock %}
