--- a/blog/templates/registration/logged_out.html
+++ b/blog/templates/registration/logged_out.html
@@ -1,6 +1,20 @@
-{% extends 'blog/base.html' %}
-
+{%extends 'blog/base.html'%}
+{% load static%}
+{%block title%} | Log Out {%endblock%}
 {% block main %}
-    <h2>You have been logged out</h2>
-    <a href="{% url 'login' %}">Login again</a>
+<!-- Page Header-->
+<header class="masthead" style="background-image: url('{% static "blog/assets/img/log.jpg" %}')">
+    <div class="container position-relative px-4 px-lg-5">
+        <div class="row gx-4 gx-lg-5 justify-content-center">
+            <div class="col-md-10 col-lg-8 col-xl-7">
+                <div class="page-heading">
+                    <h1>خارج شدید</h1>
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
+<!-- Main Content-->
+    <h2>شما خارج شدید</h2>
+    <a href="{% url 'login' %}">ورود مجدد</a>
 {% endblock %}
