--- a/blog/templates/blog/order_history.html
+++ b/blog/templates/blog/order_history.html
@@ -3,7 +3,7 @@
 {%block title%} | Order History {%endblock%}
 {% block main %}
 <!-- Page Header-->
-<header class="masthead" style="background-image: url('{% static "blog/assets/img/about-bg.jpg" %}')">
+<header class="masthead" style="background-image: url('{% static "blog/assets/img/shp-cart.jpg" %}')">
     <div class="container position-relative px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7">
@@ -16,12 +16,12 @@
 </header>
 <!-- Main Content-->
     {% for order in orders %}
-        <h3>Order {{ order.id }} - {{ order.order_date }}</h3>
+        <h3>سفارش {{ order.id }} - {{ order.order_date }}</h3>
         <ul>
             {% for item in order.items.all %}
-                <li>{{ item.quantity }} of {{ item.product.title }} - ${{ item.total_price }}</li>
+                <li>تعداد {{ item.quantity }} عدد از  {{ item.product.title }} - {{ item.total_price }} تومان</li>
             {% endfor %}
         </ul>
-        <p>قیمت کل: ${{ order.total_price }}</p>
+        <p>قیمت کل: {{ order.total_price }} تومان</p>
     {% endfor %}
 {% endblock %}
